01-postgres-satefulset-service.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wso2am-postgresql-db
  namespace: wso2am
spec:
  serviceName: wso2am-postgresql-db-service
  selector:
    matchLabels:
      app: wso2am-postgresql-db
  replicas: 1
  template:
    metadata:
      labels:
        app: wso2am-postgresql-db
    spec:
      securityContext:
        fsGroup: 999
      containers:
      - name: wso2am-postgresql-db
        image: postgres:13.11-bullseye
        args:
        - -c
        - max_connections=1000
        - -c
        - shared_buffers=1024MB
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: wso2am-postgresql-db
          mountPath: /data/pgdata
        securityContext:
          runAsNonRoot: true
          runAsUser: 999
          runAsGroup: 999
        livenessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - exec pg_isready -U postgres
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - exec pg_isready -U postgres
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          requests:
            memory: 256Mi
            cpu: 250m
          limits:
            memory: 512Mi
            cpu: 750m
  volumeClaimTemplates:
  - metadata:
      name: wso2am-postgresql-db
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: "nfs-client"
      resources:
        requests:
          storage: 8Gi
---
apiVersion: v1
kind: Service
metadata:
  name: wso2am-postgresql-db-service
  namespace: wso2am
spec:
  selector:
    app: wso2am-postgresql-db
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: 5432
